--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -22,6 +22,7 @@ $accent: #4440f6; // icon and activity color
 $greycolor: #a8a8a8; // ?
 $whitecolor: #fff; // switch light-dark styles color
 $hdbottom: rgba(0, 0, 0, 0.2); // header bottom color
+$backgroundColorModal: #f8f8f8;
 
 // Colors for switcher-theme
 $switcher-accent: #4b48db;
