--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,6 +12,7 @@
 @import './favourite';
 @import './read-page';
 @import './weather';
+@import './newscard';
 
 @import './utils/category';
 @import './utils/news';
