--- a/src/sass/_read-page.scss
+++ b/src/sass/_read-page.scss
@@ -1,3 +1,8 @@
+
+.read-page {
+	padding-top: 60px;
+}
+
 .undefined {
 	display: flex;
 	flex-direction: column;
@@ -31,9 +36,9 @@
 }
 
 .read-list {
+
 	&__item {
 		margin-bottom: 60px;
-		border-bottom: 1px solid #929292;
 	}
 
 	&__button {
@@ -42,6 +47,7 @@
 		align-items: center;
 		width: 100%;
 		cursor: pointer;
+		border-bottom: 1px solid #929292;
 	}
 
 	&__data {
@@ -57,6 +63,7 @@
 	}
 }
 
-.is-hidden {
-	display: none;
+.card-list {
+	display: flex;
+	padding-top: 40px;
 }
