--- a/src/partials/categories_calendar.html
+++ b/src/partials/categories_calendar.html
@@ -26,7 +26,7 @@
 	<div class="calendar">
 		<p class="calendar__text">Search date news</p>
 
-			<div class="backdrop is-hidden">
+			<div class="backdrop display-none">
 			</div>
 			<div class="calendar__wrapper-input">
 				<svg class="calendar__icon-calendar" width="20" height="20">
