--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -56,7 +56,7 @@
         <use href="./images/sprite.svg#icon-sun-active"></use>
       </svg>
       <label>
-        <input type="checkbox" class="switcher" />
+        <input type="checkbox" class="switcher-checkbox" />
         <span class="check"></span>
       </label>
       <svg class="theme-switcher__icon" width="21" height="21">
