--- a/src/partials/newsgrid.html
+++ b/src/partials/newsgrid.html
@@ -13,7 +13,7 @@
         <!-- </button> -->
         <div class="pages__numbers">
           <ul class="pages__numbers-list">
-            <li class="pages__numbers-item active">
+            <li class="pages__numbers-item">
               <a href="#" class="pages__numbers-link">1</a>
             </li>
             <li class="pages__numbers-item">
