--- a/src/sass/_mobile-menu.scss
+++ b/src/sass/_mobile-menu.scss
@@ -1,65 +1,71 @@
 .js-close-button {
-	position: absolute;
-	right: 16px;
-	top: 28.5px;
+  position: absolute;
+  right: 16px;
+  top: 28.5px;
 }
 
 .menu-nav {
-	margin-top: 50px;
+  margin-top: 50px;
 
-	&__item {
-		display: flex;
-		align-items: center;
-		padding: 10px 16px;
-		width: 100vw;
-	}
+  &__item {
+    display: flex;
+    align-items: center;
+    padding: 10px 16px;
+    width: 100vw;
+  }
 
-	&__link {
-		display: flex;
-		align-items: center;
-	}
+  &__link {
+    display: flex;
+    align-items: center;
+  }
 
-	&__icon {
-		margin-right: 14px;
-	}
+  &__icon {
+    margin-right: 14px;
+  }
 
-	&__link--arrow {
-		display: flex;
-		align-items: center;
-		margin-left: 163px;
-	}
+  &__link--arrow {
+    display: flex;
+    align-items: center;
+    margin-left: 163px;
+  }
 
-	&__item:hover,
-	&__item:focus {
-		color: $whitecolor;
-	}
+  &__item:hover,
+  &__item:focus {
+    color: $whitecolor;
+  }
 }
 
 .menu-nav__item:hover,
 .menu-nav__item:focus {
-	background-color: $accent;
+  background-color: $accent;
 }
 
 .menu-container {
-	padding: 24px 16px 18px 16px;
-	position: relative;
-	z-index: 100;
+  padding: 24px 16px 18px 16px;
+  position: relative;
+  z-index: 100;
 }
 
 .theme-switcher {
-	margin: 248px auto 18px 16px;
-	width: 98px;
-	height: 21px;
+  // margin: 248px auto 18px 16px;
+  width: 98px;
+  height: 21px;
 }
 
 .mobile-menu {
-	height: 568px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #fff;
+  z-index: 999;
 }
 
 .icon {
-	stroke: $text;
+  stroke: $text;
 }
 
 .icon-close {
-	stroke: $text;
+  stroke: $text;
 }
