fixed mobile menu change size of viewport

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -59,7 +59,7 @@
 			</svg>
 
 			<label class="switch">
-				<input type="checkbox" class="switch-checkbox" />
+				<input type="checkbox" class="switch-checkbox-mobile" />
 				<span class="slider-round"></span>
 			</label>
 
