--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,5 @@
-<footer><div class="container">It's footer-section</div></footer>
+<footer class="footer">
+	<div class="container footer__container">
+		<p class="footer__copy">&#169; Code Froge</p>
+	</div>
+</footer>
