--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,18 +1,19 @@
-@import './common';
+@import "./common";
 
-@import './utils/variables';
+@import "./utils/variables";
 
-@import './base/fonts';
-@import './base/reset';
-@import './base/basic';
+@import "./base/fonts";
+@import "./base/reset";
+@import "./base/basic";
 
-@import './header';
-@import './mobile-menu';
-@import './calendar';
-@import './favourite';
-@import './read-page';
-@import './weather';
+@import "./header";
+@import "./mobile-menu";
+@import "./calendar";
+@import "./favourite";
+@import "./read-page";
+@import "./weather";
+@import "./footer";
 
-@import './utils/category';
-@import './utils/news';
-@import './utils/dark-theme';
+@import "./utils/category";
+@import "./utils/news";
+@import "./utils/dark-theme";
