--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
 	<div class="container footer__container">
-		<p class="footer__copy">&#169; Code Froge</p>
+		<p class="footer__copy">&#169; Code Forge</p>
 	</div>
 </footer>
