--- a/src/partials/newsgrid.html
+++ b/src/partials/newsgrid.html
@@ -1,5 +1,5 @@
 <section class="newsgrid">
-	<div class="news__container">
+	<div class="news__container js-pagination-m">
 		<ul class="list-news js-list-new">
 			<!-- место для динамического списка -->
 		</ul>
@@ -31,6 +31,12 @@
 					</a>
 				</button>
 			</div>
+<!-- Кастомна пагінація від Макса -->
+		<div class="pagination">
+			<ul> <!--pages or li are comes from javascript --> </ul>
 		</div>
+			
+		</div>
+		
 	</div>
 </section>
