--- a/src/sass/_newscard.scss
+++ b/src/sass/_newscard.scss
@@ -33,162 +33,218 @@
 //   padding: 16px 16px 16px 16px;
 // }
 
-.news-card {
-  position: relative;
-  max-width: 288px;
-  // @media screen and (max-width: 767px) {
-  //   max-width: 288px;
-  // }
+.list-news {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 28px;
+	margin-bottom: 40px;
 
-  // @media screen and (min-width: 768px) and (max-width: 1279px) {
-  //   max-width: 353px;
-  // }
-  @media screen and (min-width: $tablet) {
-    max-width: 353px;
-  }
+	@media screen and (min-width: $tablet) {
+		gap: 30px;
+		margin-bottom: 48px;
+	}
 
-  @media screen and (min-width: $desktop) {
-    max-width: 395px;
-    // padding: 23px;
-    border: 1px solid #fa0410;
-  }
+	@media screen and (min-width: $desktop) {
+		row-gap: 40px;
+		column-gap: 32px;
+		margin-bottom: 60px;
+	}
 }
 
+.list-news__item {
+	@media screen and (min-width: $tablet) {
+		flex-basis: calc((100% - 30px) / 2);
+	}
+	@media screen and (min-width: $desktop) {
+		flex-basis: calc((100% - 65px) / 3);
+	}
+}
+
+.news-card {
+}
+
+.news-card__image-wrapper {
+	margin-bottom: 20px;
+}
 .news-card__image {
-  display: block;
-  width: 100%;
-  margin-bottom: 20px;
+	object-fit: cover;
+	height: 395px;
 }
 
 .news-card__category {
-  font-family: 'Manrope';
-  width: 124px;
-  height: 24px;
-  padding-top: 4px;
-  padding-bottom: 4px;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.33;
-  text-align: center;
+	font-family: "Manrope";
+	width: 124px;
+	height: 24px;
+	padding: 4px 8px;
+	// font-style: normal;
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 1.33;
+	text-align: center;
 
-  color: #ffffff;
-  background-color: rgba(68, 64, 246, 0.7);
-  position: absolute;
-  top: 40px;
-  left: 0px;
-  border-radius: 0px 4px 4px 0px;
+	color: #ffffff;
+	background-color: rgba(68, 64, 246, 0.7);
+	position: absolute;
+	top: 40px;
+	left: 0px;
+	border-radius: 0px 4px 4px 0px;
+}
+
+.js-to-fav {
+}
+.news-card__add-favorite {
+}
+.news-card__icon {
+}
+.news-card__title {
+}
+.news-card__text {
+}
+.news-card__details {
+}
+.news-card__date-link {
+}
+.link {
+}
+.news-card__news-link {
+}
+
+.news-card {
+	// position: relative;
+	// max-width: 288px;
+	// // @media screen and (max-width: 767px) {
+	// //   max-width: 288px;
+	// // }
+
+	// // @media screen and (min-width: 768px) and (max-width: 1279px) {
+	// //   max-width: 353px;
+	// // }
+	// @media screen and (min-width: $tablet) {
+	// 	max-width: 353px;
+	// }
+
+	// @media screen and (min-width: $desktop) {
+	// 	max-width: 395px;
+	// 	// padding: 23px;
+	// 	border: 1px solid #fa0410;
+	// }
+}
+
+.news-card__image {
+	// display: block;
+	// width: 100%;
+	// margin-bottom: 20px;
 }
 
 .news-card__add-favorite {
-  display: flex;
-  // align-items: center;
-  justify-content: center;
-  gap: 4px;
-  font-family: 'Manrope';
-  width: 126px;
-  height: 28px;
-  background-color: #f51212;
-  color: #111321;
+	display: flex;
+	// align-items: center;
+	justify-content: center;
+	gap: 4px;
+	font-family: "Manrope";
+	width: 126px;
+	height: 28px;
+	background-color: #f51212;
+	color: #111321;
 
-  padding-top: 6px;
-  padding-bottom: 6px;
-  // margin-left: auto;
-  // margin-right: auto;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.37;
-  text-align: center;
+	padding-top: 6px;
+	padding-bottom: 6px;
+	// margin-left: auto;
+	// margin-right: auto;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 1.37;
+	text-align: center;
 
-  position: absolute;
-  top: 355px;
-  left: 140px;
-  border-radius: 20px;
+	position: absolute;
+	top: 355px;
+	left: 140px;
+	border-radius: 20px;
 
-  @media screen and (min-width: $tablet) {
-    top: 355px;
-    left: 210px;
-  }
+	@media screen and (min-width: $tablet) {
+		top: 355px;
+		left: 210px;
+	}
 
-  @media screen and (min-width: $desktop) {
-    // display: flex;
-    top: 355px;
-    left: 260px;
-  }
+	@media screen and (min-width: $desktop) {
+		// display: flex;
+		top: 355px;
+		left: 260px;
+	}
 }
 
 .news-card__icon {
 }
 
 .news-card__title {
-  font-family: 'Manrope';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 1.38;
-  letter-spacing: -0.01em;
-  color: #111321;
-  margin-bottom: 20px;
+	// font-family: "Manrope";
+	// font-style: normal;
+	// font-weight: 700;
+	// font-size: 24px;
+	// line-height: 1.38;
+	// letter-spacing: -0.01em;
+	// color: #111321;
+	// margin-bottom: 20px;
 
-  @media screen and (min-width: $tablet) {
-    font-size: 32px;
-    // line-height: 1.38;
-  }
+	// @media screen and (min-width: $tablet) {
+	// 	font-size: 32px;
+	// 	// line-height: 1.38;
+	// }
 
-  // @media screen and (min-width: $desktop) {
-  //   font-size: 32px;
-  //   line-height: 1.38;
+	// // @media screen and (min-width: $desktop) {
+	// //   font-size: 32px;
+	// //   line-height: 1.38;
 }
 
 .news-card__text {
-  font-family: 'Manrope';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.357;
-  color: #111321;
-  margin-bottom: 20px;
+	// font-family: "Manrope";
+	// font-style: normal;
+	// font-weight: 400;
+	// font-size: 14px;
+	// line-height: 1.357;
+	// color: #111321;
+	// margin-bottom: 20px;
 
-  @media screen and (min-width: $tablet) {
-    font-size: 16px;
-    line-height: 1.38;
-  }
+	// @media screen and (min-width: $tablet) {
+	// 	font-size: 16px;
+	// 	line-height: 1.38;
+	// }
 }
 
 .news-card__details {
-  display: flex;
-  justify-content: space-between;
+	// display: flex;
+	// justify-content: space-between;
 }
 
 .news-card__date-link {
-  font-family: 'Manrope';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.36;
-  // text-align: right;
-  color: #a8a8a8;
+	// font-family: "Manrope";
+	// font-style: normal;
+	// font-weight: 400;
+	// font-size: 14px;
+	// line-height: 1.36;
+	// // text-align: right;
+	// color: #a8a8a8;
 
-  @media screen and (min-width: $tablet) {
-    font-size: 16px;
-    line-height: 1.38;
-  }
+	// @media screen and (min-width: $tablet) {
+	// 	font-size: 16px;
+	// 	line-height: 1.38;
+	// }
 }
 
 .news-card__news-link {
-  font-family: 'Manrope';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.36;
-  color: #4440f7;
+	// font-family: "Manrope";
+	// font-style: normal;
+	// font-weight: 400;
+	// font-size: 14px;
+	// line-height: 1.36;
+	// color: #4440f7;
 
-  @media screen and (min-width: $desktop) {
-    padding-right: 26px;
-    font-size: 16px;
-    line-height: 1.38;
-  }
+	// @media screen and (min-width: $desktop) {
+	// 	padding-right: 26px;
+	// 	font-size: 16px;
+	// 	line-height: 1.38;
+	// }
 }
 
 .link {
