--- a/src/sass/_favourite.scss
+++ b/src/sass/_favourite.scss
@@ -38,27 +38,17 @@
   top: 35%;
   right: 8px;
 
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  gap: 4px;
-  padding: 10px;
+  display: inline-block;
+  //justify-content: center;
+  //align-items: center;
+  //gap: 4px;
+  padding: 6px 12px;
 
   height: 28px;
   width: 168px;
 
   background-color: $light;
   border-radius: 20px;
-
-  z-index: 100;
-}
-
-.news-card__add-favorite,
-.news-card__remove-favorite {
-  display: inline-block;
-  //position: absolute;
-  //top: 50%;
-  //left: 50%;
 
   color: $text;
   font-family: Manrope, sans-serif;
@@ -69,9 +59,25 @@
 
 }
 
+/*.news-card__add-favorite,
+.news-card__remove-favorite {
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  color: $text;
+  font-family: Manrope, sans-serif;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.4;
+  text-align: center;
+
+}*/
+
 .news-card__icon {
   display: inline-block;
- // position: absolute;
-  //top: 50%;
-  //right: 20%;
+  position: absolute;
+  top: 36%;
+  right: 6%;
 }
